tests/errors/scalar_list_requires_cast.dang
# List merging is pure: String! does not implicitly become ID!.
pub ids = ["abc" :: ID!, "def"]
